# equity-optimiser

./: .gitignore  README.md  design.excalidraw  main.py  pyproject.toml  requirements.txt
src/: constants.py  lin_alg.py  optimiser.py  optimiser_cvxpy.py  optimiser_scipy.py  optimiser_types.py  optimiser_validation_utils.py  validation.py
test/system/: test.py  test_eqop.py
tests/integration/: test_optimiser.py
tests/unit/: test_eqop.py  test_optimiser.py
workbooks/: README.md  download_data.py  workbook.ipynb
workbooks/spx_data/: average_daily_volumes.csv  expected_returns.csv  sp500_tickers.csv
