[project]
name = "equity-optimiser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "scipy>=1.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
